# project-django

./: .gitignore  README.md  docker-compose.yml
app/config/: settings.py
nginx/: nginx.conf
nginx/dev/: dev.conf
web/: Dockerfile  pyproject.toml
